<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_splash"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_splash"
            app:layout_constraintEnd_toEndOf="@+id/iv_splash"
            app:layout_constraintStart_toStartOf="@+id/iv_splash"
            app:layout_constraintTop_toBottomOf="@+id/iv_splash" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_name"
            app:layout_constraintStart_toStartOf="@+id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:drawableEnd="@drawable/ic_eye"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
        <!--
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Or"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Continue With"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="152dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawableStart="@drawable/iv_facebook"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="152dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawableStart="@drawable/iv_google"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/google"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
        -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvLogin"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/yellow_button"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/donot_account"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tvLogin"
            app:layout_constraintStart_toStartOf="@+id/tvLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

